--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>老婆爱不爱我？</title>
+    <title>仔仔</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <img id="mainImage" src="images/heart.png" alt="爱心">
-        <h1 id="question">小宝爱不爱我</h1>
+        <h1 id="question">仔仔喜不喜欢我？</h1>
         <div class="buttons">
-            <button id="yes">爱</button>
-            <button id="no">不爱</button>
+            <button id="yes">喜欢</button>
+            <button id="no">不喜欢</button>
         </div>
     </div>
 
